--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -18,7 +18,7 @@ set (HEADER_FILES
           mdtSqlWindow.h
           mdtSqlDialog.h
           mdtSqlSelectionDialog.h
-          mdtSqlFormWidget.h
+          #mdtSqlFormWidget.h
           mdtSqlTableWidget.h
           mdtDataTableManager.h
           mdtSqlDatabaseManager.h
@@ -38,7 +38,7 @@ set (SOURCES_FILES
           mdtSqlDialog.cpp
           mdtSqlRecord.cpp
           mdtSqlSelectionDialog.cpp
-          mdtSqlFormWidget.cpp
+          #mdtSqlFormWidget.cpp
           mdtSqlTableWidget.cpp
           mdtSqlTableSelectionItem.cpp
           mdtSqlTableSelectionRow.cpp
