Working on new USB/USBTMC part (control transfer)

--- a/src/mdtport/CMakeLists.txt
+++ b/src/mdtport/CMakeLists.txt
@@ -79,8 +79,12 @@ set (SOURCES_FILES
           
           # New USB API
           mdtUsbDeviceList.cpp
+          mdtUsbTransfer.cpp
+          mdtUsbControlTransfer.cpp
           # New USBTMC API
           mdtUsbtmcFrame.cpp
+          mdtUsbtmcControlTransfer.cpp
+          mdtUsbtmcTransferHandler.cpp
     )
 
 # Liste des fichiers ui
