--- a/src/mdtport/CMakeLists.txt
+++ b/src/mdtport/CMakeLists.txt
@@ -85,6 +85,7 @@ set (SOURCES_FILES
           mdtUsbDeviceList.cpp
           mdtUsbTransfer.cpp
           mdtUsbControlTransfer.cpp
+          mdtUsbtmcBulkTransfer.cpp
           mdtUsbPortThreadNew.cpp
           #mdtUsbTransferPool.cpp
           # New USBTMC API
