Working on new USBTMC system

--- a/src/mdtport/CMakeLists.txt
+++ b/src/mdtport/CMakeLists.txt
@@ -102,6 +102,7 @@ set (FORM_FILES
           mdtPortConfigWidget.ui
           # Setup dialogs
           mdtAbstractPortSetupDialog.ui
+          mdtUsbtmcPortSetupDialog.ui
     )
 
 # Liste des fichiers rcc (ressources)
