Working on device part

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ doc/Beckhoff
 doc/bus/canbus/CiA
 doc/Keithley
 doc/Tyco
+doc/Visa
 
 # Binary and Makefile files generated in QtDesigner plugin directory #
 #########################################################
