Working on device address

--- a/src/mdtport/CMakeLists.txt
+++ b/src/mdtport/CMakeLists.txt
@@ -59,6 +59,8 @@ set (SOURCES_FILES
           mdtPortInfo.cpp
           mdtDeviceInfo.cpp
           mdtPortInfoCbHandler.cpp
+          # Device address
+          mdtDeviceAddress.cpp
           # Port manager
           mdtPortManager.cpp
           mdtPortManagerStateMachine.cpp
