Working on test tool (integrating device part modifications)

--- a/src/mdtutilsgui/CMakeLists.txt
+++ b/src/mdtutilsgui/CMakeLists.txt
@@ -92,6 +92,7 @@ set (SOURCES_FILES
           mdtParentChildTableModel.cpp
           mdtParentChildTableItem.cpp
           mdtUiMessageHandler.cpp
+          mdtQActionEnableStateGuard.cpp
     )
 
 # Qt ui files
